--- a/Assessment.html
+++ b/Assessment.html
@@ -19,9 +19,9 @@
             <a href="https://www.prepbytes.com/login">link to a website open in same tab</a></p>
             <a href="list.html">Internal link</a>
         <p> Image 1</p>
-           <img src="C:\Users\Lenovo\Desktop\session\IMG20200613153629.jpg" alt="" height="100px" width="100px"><br>
+           <img src="./image.jpg" alt="" height="100px" width="100px"><br>
            <p>Image 2</p> 
-           <a href=""><img src="C:\Users\Lenovo\Desktop\session\IMG20200613153629.jpg" alt="" height="100px" width="100px"></a><hr>
+           <img src="./image.jpg" alt="" height="100px" width="100px"></a><hr>
            <h2>lists</h2>
            <a href="list.html">click here</a>
         
