--- a/INDEX.html
+++ b/INDEX.html
@@ -7,7 +7,7 @@
     <title>Iframes</title>
 </head>
 <body>
-    <iframe src="index2.html" height="600" width="500"></iframe><br>
+    <iframe src="index.mp4" height="600" width="500"></iframe><br>
     <a href="index1.html">Click here to see the video</a>
 </body>
 
