--- a/INDEX.html
+++ b/INDEX.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <iframe src="index.mp4" height="600" width="500"></iframe><br>
-    <a href="index1.html">Click here to see the video</a>
+    <a href="index.html">Click here to see the video</a>
 </body>
 
 
