--- a/INDEX.html
+++ b/INDEX.html
@@ -7,7 +7,7 @@
     <title>Iframes</title>
 </head>
 <body>
-    <iframe src="./index.mp4" height="600" width="500"></iframe><br>
+    <iframe src="./Index.mp4" height="600" width="500"></iframe><br>
     <a href="index.html">Click here to see the video</a>
 </body>
 
