--- a/INDEX.html
+++ b/INDEX.html
@@ -7,8 +7,8 @@
     <title>Iframes</title>
 </head>
 <body>
-    <iframe src="./Index.mp4" height="600" width="500"></iframe><br>
-    <a href="index.html">Click here to see the video</a>
+    <iframe src="./Assessment.html" height="600" width="500"></iframe><br>
+    <a href="./Index.mp4">Click here to see the video</a>
 </body>
 
 
